@@ -284,6 +284,7 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		Added reorder node performance test
 		Added multisampling anti-aliasing support in EAGLView, ESRenderer
 		RenderTexture: getUIImageFromBuffer supports RetinaDisplay. patch.
+		CCArray: check for bounds in insertObjectAtIndex. patch.
 	* marcu.catalin:
 		Menu items are not consumed is items are not visible
 	* Mark Cooke:
